--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://db.onlinewebfonts.com/c/641bc93cc4c70cc2f9bb2c9abb8d3483?family=Regular"
       rel="stylesheet"
@@ -22,7 +23,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Vite App</title>
+    <title>Touch-API</title>
   </head>
   <body>
     <div id="app"></div>
