--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    <link
+      href="https://db.onlinewebfonts.com/c/11c31df78e9ab5b381fdaac58ae3ae91?family=Evolventa"
+      rel="stylesheet"
+    />
     <link
       href="https://db.onlinewebfonts.com/c/641bc93cc4c70cc2f9bb2c9abb8d3483?family=Regular"
       rel="stylesheet"
